finally solved overflow and scrolling problem

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,20 +11,18 @@
     0 0 5px rgba(48, 48, 248, 0.719), 0 0 10px rgb(48, 48, 252);
 }
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 html {
   scroll-behavior: smooth;
   scroll-snap-type: y proximity;
-  overflow-y: scroll;
-  overflow-x: hidden;
   background-color: #000;
 }
 
-body {
-  width: 99vw;
-}
-
 section {
-  height: 100vh;
   scroll-snap-align: start;
 }
 
@@ -39,9 +37,9 @@ section {
   background-color: #000;
   box-shadow: 0 0 20px rgb(0, 0, 0);
   justify-content: space-between;
+  align-items: center;
   .logo {
     font-size: 1.25em;
-    padding: 0.6em;
     padding-left: 2vw;
     cursor: pointer;
     text-decoration: none;
@@ -54,7 +52,6 @@ section {
     transition: 0.25s;
   }
   .menu {
-    padding: 1em;
     a {
       color: lightgray;
       text-decoration: none;
@@ -73,46 +70,55 @@ section {
 }
 
 .introduction {
-  height: 80vh;
   background-color: #5626c4;
-  padding: 10vh 10vw 10vh 10vw;
   display: flex;
   align-items: center;
   color: white;
-  .photo {
-    object-fit: cover;
-    border: #ffffff solid 0.25em;
-    box-shadow: #0e0013 0 0 5em;
-    width: 30vw;
-    height: 30vw;
-    border-radius: 100%;
-    margin-right: 10vw;
-  }
-  .about {
-    height: auto;
-    width: 50%;
-    font-family: "Roboto", sans-serif;
-    .about-title {
-      font-size: 4em;
-      font-weight: bold;
-      span {
-        color: var(--neon-red);
-        text-shadow: var(--neon-red-effect);
-      }
-      margin-bottom: 2.5em;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  .intro-elements {
+    align-items: center;
+    display: flex;
+    padding: 10%;
+    justify-content: space-between;
+    .photo {
+      object-fit: cover;
+      border: #ffffff solid 0.25em;
+      box-shadow: #0e0013 0 0 5em;
+      width: 30vw;
+      height: 30vw;
+      border-radius: 50%;
+      margin: 0;
     }
-    .about-description {
-      font-size: 1.25em;
-      text-align: center;
+    .about {
+      height: auto;
+      width: 50%;
+      font-family: "Roboto", sans-serif;
+      align-items: center;
+      justify-content: space-between;
+      .about-title {
+        font-size: 4em;
+        font-weight: bold;
+        margin: 0;
+        span {
+          color: var(--neon-red);
+          text-shadow: var(--neon-red-effect);
+        }
+      }
+      .about-description {
+        font-size: 1.25em;
+        text-align: center;
+        margin: 0;
+      }
     }
   }
 }
 
 .story {
-  padding: 3% 2% 2% 2%;
   background-color: #646c79;
   color: #181818;
-  height: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   .left-column {
@@ -120,6 +126,7 @@ section {
     display: grid;
     grid-template-rows: 25% 25% 25% 25%;
     height: 90%;
+    align-items: center;
   }
   .right-column {
     width: 50%;
@@ -128,11 +135,11 @@ section {
 
 .projects {
   background-color: #1f3044;
-  padding: 2%;
-  height: 100%;
+  height: 100vh;
   color: #c3c4d5;
   h1 {
-    padding-top: 2vh;
+    margin: 0;
+    padding-top: 7vh;
     font-size: 3em;
     font-weight: bold;
     span {
@@ -171,68 +178,63 @@ section {
     }
   }
 }
-.skills {
-  padding-top: 2%;
-  padding-bottom: 2%;
-  padding-left: 2%;
-  padding-right: 2%;
-  background-color: #111924;
-  height: 100%;
-  margin-bottom: -8vh;
-  h1 {
-    color: #c3c4d5;
-    padding-top: 2vh;
-    font-size: 3em;
-    font-weight: bold;
-    span {
-      color: var(--neon-green);
-      text-shadow: var(--neon-green-effect);
+
+.last-section {
+  justify-content: space-between;
+  .skills {
+    background-color: #111924;
+    height: 92vh;
+    h1 {
+      margin: 0;
+      padding-left: 2vw;
+      padding-top: 7vh;
+      color: #c3c4d5;
+      font-size: 3em;
+      font-weight: bold;
+      span {
+        color: var(--neon-green);
+        text-shadow: var(--neon-green-effect);
+      }
     }
-  }
-  ul {
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    list-style-type: none;
-    justify-content: center;
-    .skillsGrid {
-      margin-left: 1vw;
-      margin-right: 1vw;
-      object-fit: scale-down;
-      padding-bottom: 10vh;
-      img {
+    ul {
+      display: grid;
+      grid-template-columns: 20% 20% 20% 20% 20%;
+      list-style-type: none;
+      justify-content: center;
+      .skillsGrid {
+        margin-left: 1vw;
+        margin-right: 1vw;
         object-fit: scale-down;
-        width: 10vw;
-        height: 6vw;
+        padding-bottom: 10vh;
+        img {
+          object-fit: scale-down;
+          width: 10vw;
+          height: 6vw;
+        }
       }
     }
   }
-}
 
-.last-section {
-  height: 91vh;
-  padding-bottom: 6vh;
-}
-
-.contact {
-  display: fixed;
-  bottom: 0;
-  margin-left: -1vw;
-  width: 100vw;
-  height: 3vh;
-  display: flex;
-  background-color: #000;
-  .socialmedia {
+  .contact {
+    display: absolute;
+    bottom: 0;
+    margin-left: -1vw;
+    height: 3vh;
     display: flex;
-    img {
-      height: 2.25vh;
-      width: auto;
-      padding-top: 0.25vh;
-      padding-left: 2vw;
-    }
-    img:hover {
-      cursor: pointer;
-      transform: scale3d(1.1, 1.1, 1.1);
-      transition: 0.1s;
+    background-color: #000;
+    .socialmedia {
+      display: flex;
+      img {
+        height: 2.25vh;
+        width: auto;
+        padding-top: 0.25vh;
+        padding-left: 2vw;
+      }
+      img:hover {
+        cursor: pointer;
+        transform: scale3d(1.1, 1.1, 1.1);
+        transition: 0.1s;
+      }
     }
   }
 }
